# Runote

./: .env.dev  .gitignore  docker-compose.yaml  features.md  makefile  techstack.md
apps/api-gateway/: dev.env  jest.config.js  local.Dockerfile  package-lock.json  package.json  tsconfig.json
apps/api-gateway/src/: index.ts
apps/api-gateway/tests/: gateway.test.ts
apps/auth_service/: Makefile  export_openapi_yaml.py  local.Dockerfile  main.py  openapi.json  openapi.yaml  pyproject.toml
apps/auth_service/app/: db.py  deps.py
apps/auth_service/app/api/: __init__.py
apps/auth_service/app/api/endpoints/: auth.py  test_cleanup.py
apps/auth_service/app/core/: config.py  security.py
apps/auth_service/app/models/: user.py
apps/auth_service/tests/: conftest.py  test_auth.py
apps/emotion-service/: .air.toml  Makefile  dev.env  go.mod  go.sum  local.Dockerfile  main.go
apps/emotion-service/docs/: docs.go  swagger.json  swagger.yaml
apps/emotion-service/handlers/: emotion.go  test.go
apps/emotion-service/models/: emotion.go
apps/emotion-service/mysql/: client.go
apps/emotion-service/redis/: client.go
apps/emotion-service/tests/: emotion_test.go  post_emotion_test.go  test_utils.go  validation_tests.go
apps/frontend/: .eslintrc.cjs  .prettierrc  index.html  local.Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/frontend/src/: App.vue  main.ts
apps/post-service/: .dockerignore  Makefile  dev.env  jest.config.cjs  local.Dockerfile  package-lock.json  package.json  test.env.example  tsconfig.json
apps/tag-service/: .env  Makefile  local.Dockerfile  package-lock.json  package.json  tsconfig.json
nginx/: nginx.conf
tests/: docker-compose.integration.yaml
tests/runner/: Dockerfile  index.ts  package.json  tsconfig.json
(+58 files in other folders)
