[tool.poetry]
name = "your-auth-service"
version = "0.1.0"
description = "認証サービス"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.1.0"
cryptography = "^42.0.0"

# Core
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# Auth
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.2"

# ORM / DB
sqlalchemy = "^2.0.28"
asyncpg = "^0.29.0"  # PostgreSQL driver (for async)

# Validation
pydantic = "^2.6.4"         # 最新の Pydantic
pydantic-settings = "^2.2.1"  # `.env` 設定などに便利

# OpenAPI YAML 出力用
pyyaml = "^6.0.1"

# Optional Dev Tools
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
mypy = "^1.9.0"
black = "^24.3.0"
isort = "^5.13.2"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
